@@ -95,6 +95,7 @@ extraResourceOptions=
 13=menu.c
 14=toolbar.c
 15=prb.c
+16=taskbar.c
 [Header]
 1=main.h
 2=resource.h
@@ -103,18 +104,18 @@ extraResourceOptions=
 1=ultradefrag.rc
 [Other]
 [History]
-ultradefrag.rc,1715
-toolbar.c,3277
-upgrade.c,5628
+shutdown.c,12981
+i18n.c,8346
+vollist.c,8276
+main.c,18366
+job.c,3551
+main.h,5243
+about.c,1137
+map.c,10071
+resource.h,1796
+statbar.c,3888
 menu.c,0
-statbar.c,3889
-resource.h,1797
-map.c,10090
-about.c,1140
-main.h,5246
-job.c,3554
-main.c,18367
-vollist.c,8279
-i18n.c,8349
-shutdown.c,12982
-settings.c,967
+upgrade.c,5601
+toolbar.c,3274
+ultradefrag.rc,1712
+settings.c,966
